# valkmodel

./: manuals.md  pyproject.toml  setup.sh
configs/: data_mix_30b.yaml  data_mix_fast.yaml  tokenizer_llama3.yaml  training_130m_probe.yaml  training_1b_main.yaml  training_480m_main.yaml  valkmodel_base_1b.json  valkmodel_quality_480m.json  valkmodel_tiny_130m.json
data/: __init__.py  dataloader_builder.py  dataset_registry.py  eval_collator.py  filters.py  mixture_config.py  mixture_dataset.py  packed_collator.py  pretokenization.py  streaming_dataset.py  streaming_mixture.py  token_stream_builder.py  tokenizer_setup.py
data/pretok/: __init__.py  arrow_writer.py  cli.py  parquet_packer.py  registry_filter.py  shard_dataset.py
src/valkmodel/: __init__.py  configuration_valkmodel.py  losses.py  modeling_valkmodel.py  presets.py
src/valkmodel/data/: __init__.py  packed_dataset.py
src/valkmodel/layers/: __init__.py  gated_deltanet_layer.py  latent_jepa.py  (+2 more)
tests/: test_ablation_tracker.py  test_arrow_writer.py  test_config_presets.py  test_context_curriculum.py  test_dataset_registry.py  test_ddp_launcher.py  test_ddp_trainer.py  test_latent_branching.py  test_latent_jepa.py  test_latent_state.py  test_math_fidelity_stabilization.py  test_model_forward.py  test_packed_dataset.py  test_packed_training.py  test_parquet_packer.py  test_pretok_cli.py  test_pretok_logging.py  test_public_exports.py  test_registry_filter.py  test_scaling_validation.py  test_streaming_dataset.py  test_tool_masks_and_loss.py  test_train_cli.py  test_trainer.py  test_training_profiler.py
(+12 files in other folders)
